--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(cfg)
 set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(SOURCES
     main.cpp
+    lexer.cpp
 )
 
 set(HEADERS
-
+    lexer.h
 )
 
 add_executable(gencfg ${SOURCES} ${HEADERS})
